--- a/index.css
+++ b/index.css
@@ -13,7 +13,7 @@ body{
   font-family: 'Good Times Rg'; 
   font-style: normal;
   font-weight: 400;
-  src:local("Good Times Rg"), url("/fuentes/Good-Times-Rg.woff") format("woff");
+  src:local("Good Times Rg"), url("./fuentes/Good-Times-Rg.woff") format("woff");
 }
 ul{
     list-style: none;
