--- a/index.css
+++ b/index.css
@@ -10,10 +10,10 @@ body{
     font-family: sans-serif;
 }
 @font-face {
-  font-family: 'Good Times Rg'; 
-  font-style: normal;
-  font-weight: 400;
-  src:local("Good Times Rg"), url("./fuentes/Good-Times-Rg.woff") format("woff");
+    font-family: 'Good Times Rg'; 
+    font-style: normal;
+    font-weight: 400;
+    src:local("Good Times Rg"), url("./fuentes/Good-Times-Rg.woff") format("woff");
 }
 ul{
     list-style: none;
@@ -122,9 +122,11 @@ a{
 
 /*==================  Contenido Principal  =========================*/
 main iframe{
-    margin-top: 120px;
+    margin-top: 100px;
     width: 100%;
-    height: 500px;
+    height: 600px;
+    overflow: none;
+    z-index: 500;
 }
 
 
