--- a/principal/principal.css
+++ b/principal/principal.css
@@ -100,27 +100,29 @@ main{
 .Carrusel-3:hover{
     box-shadow:0 0 5px rgb(4, 0, 255);
 }
-.imgFooter{
-    width: 200px;
-}
+/*=====  Fortalezas  ===============*/
 .datosFortalezas{
     display: flex;
     justify-content: center;
+    justify-items: center;
     background-color: rgb(255, 255, 255);
-    display: inline-flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     font-family: sans-serif;
 }
 .fortalezas{
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 20%;
     background-color: white;
     height: auto;
     margin: 1rem;
-    padding: 1rem;    
+    padding: 1rem;
     box-shadow: 0 0 5px 0 rgba(0,0,0,0.2);
 }
 .fortalezas:hover{
     box-shadow: 0 0 5px 0 rgb(0, 38, 255);
+}
+.imgFooter{
+    width: 40%;
 }
