--- a/index.css
+++ b/index.css
@@ -226,11 +226,17 @@ footer{
 @media (width <= 550px) {
     /*===========  MENU  ================*/
     body{
-        width: 100%;
         height: 100dvh;
+        width: 100%;
+    }
+    main{
+        width: 100%;
+        height: auto;
+        margin-bottom: auto;
     }
     .nav-menu{
         width: 100%;
+        height: 50px;
     }
     .nav-menu h1{
     font-size: 25px;
@@ -244,21 +250,24 @@ footer{
     }
     footer{
         width: 100%;
+        height: auto;
         display: flex;
         flex-direction: column;
         padding: 5px;
+        margin-top: auto;
     }
     .footer-izquierda{
         display: flex;
         flex-direction: column;
-
     }
     .footer-izquierda ul li{
         display: none;
     }
     .footer-izquierda ul:hover li{
         display: block;
+        text-decoration: solid;
     }
+
     .footer-derecha{ 
         display: flex;
         flex-direction: column;
